--- a/src/application/styles.css
+++ b/src/application/styles.css
@@ -1,22 +1,24 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
-@import "./pages/Landing/style.css";
+@import './pages/Landing/style.css';
 :root {
 }
 .strong-shadow strong {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.custom-ant-menu > .css-dev-only-do-not-override-1qda4fx.ant-menu-light.ant-menu-horizontal >.ant-menu-item:hover::after{
+.custom-ant-menu
+  > .css-dev-only-do-not-override-1qda4fx.ant-menu-light.ant-menu-horizontal
+  > .ant-menu-item:hover::after {
   border-bottom-width: 0px;
   border-bottom-color: transparent !important;
 }
-.custome.ant-button , .css-dev-only-do-not-override-1qda4fx.ant-btn-default:not(:disabled):not(.ant-btn-disabled):hover {
-    color: inherit !important;
-    border-color: inherit !important;
+.custome.ant-button,
+.css-dev-only-do-not-override-1qda4fx.ant-btn-default:not(:disabled):not(.ant-btn-disabled):hover {
+  color: inherit !important;
+  border-color: inherit !important;
 }
 
-.banner{
+.banner {
   background: lightgray 50% / cover no-repeat;
 }
-
