--- a/src/application/styles.css
+++ b/src/application/styles.css
@@ -11,5 +11,5 @@
   height: fit-content !important;
 }
 .show-mask > .ant-image .ant-image-mask {
-  opacity: 1 !important
+  opacity: 1 !important;
 }
